Enhance Dockerfile and configuration for AWS deployment, update CORS settings, and improve environment variable handling in frontend build process